[gd_scene load_steps=4 format=2]

[ext_resource path="res://VR/RayTeleport.gd" type="Script" id=1]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
emission_enabled = true
emission = Color( 1, 0.627451, 0.882353, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
transmission_enabled = true
transmission = Color( 1, 0, 0.984314, 1 )

[node name="ARVRControllerExtension" type="Spatial"]
script = ExtResource( 1 )
_origin_path = NodePath("../..")

[node name="HorizontalRay" type="RayCast" parent="."]
cast_to = Vector3( 0, 0, -500 )
collide_with_areas = true

[node name="PositionIndicator" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )
